[package]
name = "raxx"
version = "0.1.0"
edition = "2021"
description = "A dax-inspired shell scripting library for Rust. Synchronous, Unix-only. Macros for safe arg escaping, piping, chaining, IO redirection, and more."
license = "MIT"
repository = "https://github.com/jeffhykin/raxx"
readme = "README.md"
keywords = ["shell", "command", "scripting", "pipe", "process"]
categories = ["command-line-utilities", "os::unix-apis"]

[dependencies]
console = "0.15"
glob = "0.3"
indicatif = "0.17"
libc = "0.2"
raxx-macros = { path = "raxx-macros", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
libc = "0.2"
tempfile = "3"
